--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@ body
 }
 
 
-/* fin header*/
-
 
 /* bloc_right */
 
@@ -254,43 +252,42 @@ header p
 
 
 
-/* mediaqueries mobile*/
+/* mediaqueries petits mobiles*/
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:360px) {
 
 body
 {
 	flex-direction: column;
 	font-family: robotoregular, Arial, sans-serif;
+	width: 100%;
 	padding: 0;
 	margin: 0;
 	}
 
+
 header 
 {
-	position: absolute;
-	margin-top: -290%;
-	margin-left: 10%;
-	text-align: center;
-	color: white;
+	color: black;
+	font-size: small;
 }
 
 header h1
 {
 	font-weight: normal;
-	font-size: 3em;
 	margin-bottom: 0;
 }
+
 
 .border
 {
 	border-bottom: solid;
-	border-color: black;
+	border-color:purple;
 }
 
 .titlecolor
 {
-	color: black;
+	color:purple;
 }
 
 header p
@@ -301,63 +298,59 @@ header p
 
 #maincontentright
 {
+	display: flex;
+	flex-direction: column;
 	background-color: rgb(246, 245, 247);
 }
 
 
 #maincontentright h2
 {
-	margin-left: 2%;
-	margin-bottom: 0.5em;
+	font-size: 1.2em;
 	font-weight: bold;
 }
 
 .titlecontent
 {
 	display: flex;
-	margin-left: 10%;
-	margin-right: 10%;
-	margin-bottom: 2%;
 	border-bottom: 2px purple solid;
 }
 
 .titlesection
 {
-	text-align: justify;
-	margin-left: 2%;
 	width: 100%;
 }
 
 .iconsright
 {
-	margin-top: 2%;
 	color: purple;
 }
 
 .container
 {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+	width: auto;
 }
 
-.container i
+.structure
 {
-	font-size: 10px;
+	font-weight: bold;
 }
 
 .textcontent
 {
-	width: 50%;
-	margin-right: 10%;
+	width: auto;
 	text-align: left;
+	font-size: 0.8em;
+	margin-left: 10%;
 }
+
 
 .date 
 {
-	width: 30%;
 	list-style-type: none;
 	display: flex;
-	margin-left: 10%;
 	font-size: 0.9em;
 }
 
@@ -367,16 +360,6 @@ header p
 	margin-top: 15px;
 }
 
-.date ul
-{
-	padding-left: 20px;
-}
-
-#maincontentright li
-{
-	list-style-type: none;
-	font-weight: bold;
-}
 
 #formation
 {
@@ -388,16 +371,17 @@ header p
 	margin-top: 3%;
 }
 
-
 .containerreco
 {
-	display: flex;
+	flex-direction: column;
+	justify-items: left;
+	font-size: 0.8em;
 }
 
 #firstrecommandation
 {
-	margin-left: 6%;
-	margin-right: 10%;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 .name, .function, .phone
@@ -413,8 +397,7 @@ header p
 {
 	background-color: rgb(107, 77, 140);
 	color: white;
-	width: auto;
-	height: 20%;
+	width: 100%;
 }
 
 #bloc_left .photoanais
@@ -444,21 +427,21 @@ header p
 	font-size: 0.8em;
 }
 
-
 #contact
 {
-	margin-top: 30%;
+	margin-top: 5%;
 }
 
 #aboutme
 {
-	margin-top: 50px;
+	margin-top:0;
 }
 
 #aboutme p
 {
-	padding: 20px;
-	text-align: justify;
+	font-size: 0.8em;
+	padding-top: 0;
+	text-align: left;
 }
 
 #lobbies
@@ -484,5 +467,463 @@ header p
 
 }
 
+/* mediaqueries grands téléphones*/
+
+@media screen and (min-width: 321px) and (max-width:767px) 
+{
+
+	body
+	{
+		flex-direction: column;
+		font-family: robotoregular, Arial, sans-serif;
+		width: 100%;
+		padding: 0;
+		margin: 0;
+		}
+	
+	
+	header 
+	{
+		color: black;
+		font-size: small;
+	}
+	
+	header h1
+	{
+		font-weight: normal;
+		margin-bottom: 0;
+	}
+	
+	
+	.border
+	{
+		border-bottom: solid;
+		border-color:purple;
+	}
+	
+	.titlecolor
+	{
+		color: purple;
+	}
+	
+	header p
+	{
+		margin-top: 0;
+		font-size: 1.5em;
+	}
+	
+	#maincontentright
+	{
+		display: flex;
+		flex-direction: column;
+		background-color: rgb(246, 245, 247);
+	}
+	
+	
+	#maincontentright h2
+	{
+		
+		font-size: 1.2em;
+		font-weight: bold;
+	}
+	
+	.titlecontent
+	{
+		display: flex;
+		border-bottom: 2px purple solid;
+	}
+	
+	.titlesection
+	{
+		width: 100%;
+	}
+	
+	.iconsright
+	{
+		color: purple;
+	}
+	
+	.container
+	{
+		display: flex;
+		flex-direction: column;
+		width: auto;
+	}
+	
+	.structure
+{
+	font-weight: bold;
+}
+
+.textcontent
+{
+	width: auto;
+	text-align: left;
+	font-size: 0.8em;
+	margin-left: 10%;
+}
+
+.date 
+{
+	list-style-type: none;
+	display: flex;
+	font-size: 0.9em;
+}
+	
+	.date i
+	{
+		color: purple;
+	}
+	
+	
+	#formation
+	{
+		margin-top: 5%;
+	}
+	
+	#experiences, #recommandations
+	{
+		margin-top: 3%;
+	}
+	
+	.containerreco
+	{
+		flex-direction: column;
+		justify-items: left;
+		font-size: 0.8em;
+}
+
+#firstrecommandation
+{
+	margin-left: 0;
+	margin-right: 0;
+}
+	
+	.name, .function, .phone
+	{
+		font-weight: bold;
+	}
+	
+	/*fin bloc_right
+	
+	/* bloc_left*/
+	
+	#bloc_left
+	{
+		background-color: rgb(107, 77, 140);
+		color: white;
+	}
+	
+	#bloc_left .photoanais
+	{
+		width: 200px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 20px;
+		padding-bottom: 10px;
+	}
+	
+	#bloc_left h1
+	{
+		color: black;
+		font-family: Arial;
+		font-weight: bold;
+		background-color: white;
+		height: 30px;
+		padding-top: 10px;
+		text-align: center;
+	}
+	
+	#bloc_left li 
+	{
+		list-style-type: none;
+		margin-left: 10px;
+		font-size: 0.8em;
+	}
+	
+	
+	#contact
+	{
+		margin-top: 5%;
+	}
+	
+	#aboutme
+	{
+		margin-top: 5%;
+	}
+	
+	#aboutme p
+	{
+		font-size: 0.8em;
+		padding-top: 0;
+		text-align: left;
+	}
+	
+	#lobbies
+	{
+	margin-top: 0;
+	}
+	
+	
+	.icons
+	{
+		display: flex;
+		justify-content: center;
+	}
+	
+	.iconslobbies
+	{
+		border-radius: 50%;
+		border: 2px white solid; 
+		padding: 0.5em;
+		margin-right: 3%;
+		margin-left: 3%;
+	}
+	
+	}
+	
 
 
+/* mediaqueries tablette*/
+
+@media screen and (min-width:768px) and (max-width:1024px) 
+{
+
+	body
+	{
+		display: flex;
+		font-family: robotoregular, Arial, sans-serif;
+		padding: 0;
+		margin: 0;
+	}
+	
+	
+	/* fin header*/
+	
+	
+	/* bloc_right */
+	
+	
+	/*header*/
+	
+	
+	header 
+	{
+		margin-top: 8%;
+		margin-left: 10%;
+	}
+	
+	
+	header h1
+	{
+		font-weight: normal;
+		font-size: 3.5em;
+		margin-bottom: 0;
+	}
+	
+	.border
+	{
+		border-bottom: solid;
+		border-color: purple;
+	}
+	
+	.titlecolor
+	{
+		color: purple;
+	}
+	
+	header p
+	{
+		margin-top: 0;
+		font-size: 1.5em;
+	}
+	
+	#bloc_right
+	{
+		background-color: rgb(246, 245, 247);
+	}
+	
+	
+	#maincontentright h2
+	{
+		margin-left: 2%;
+		margin-bottom: 0.5em;
+		font-weight: bold;
+	}
+	
+	.titlecontent
+	{
+		display: flex;
+		margin-left: 10%;
+		margin-right: 10%;
+		margin-bottom: 2%;
+		border-bottom: 2px purple solid;
+	}
+	
+	.titlesection
+	{
+		text-align: justify;
+		margin-left: 2%;
+		width: 100%;
+	}
+	
+	.iconsright
+	{
+		margin-top: 5%;
+		color: purple;
+	}
+	
+	.container
+	{
+		display: flex;
+		justify-content: space-between;
+	}
+	
+	.container i
+	{
+		font-size: 10px;
+	}
+	
+	.textcontent
+	{
+		width: 70%;
+		margin-right: 10%;
+		text-align: left;
+	}
+	
+	.date 
+	{
+		width: 30%;
+		list-style-type: none;
+		display: flex;
+		margin-left: 10%;
+		font-size: 0.9em;
+	}
+	
+	.date i
+	{
+		color: purple;
+		margin-top: 15px;
+	}
+	
+	.date ul
+	{
+		padding-left: 20px;
+	}
+	
+	#maincontentright li
+	{
+		list-style-type: none;
+		font-weight: bold;
+	}
+	
+	
+	.structure
+	{
+		text-align: left;
+	}
+	
+	#formation
+	{
+		margin-top: 10%;
+	}
+	
+	#experiences, #recommandations
+	{
+		margin-top: 3%;
+	}
+	
+	
+	.containerreco
+	{
+		display: flex;
+		margin-bottom: 2%;
+		margin-right: 10%;
+	}
+
+	.name, .function, .phone
+	{
+		font-family: sans-serif;
+	}
+	
+	
+	/*fin bloc_right
+	
+	/* bloc_left*/
+	
+	#bloc_left
+	{
+		background-color: rgb(107, 77, 140);
+		background-repeat: repeat;
+		width: 100%;
+		color: white;
+	}
+	
+	#bloc_left .photoanais
+	{
+		width: 200px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 20px;
+		padding-bottom: 10px;
+	}
+	
+	#bloc_left h1
+	{
+		color: black;
+		font-family: Arial;
+		font-weight: bold;
+		background-color: white;
+		height: 30px;
+		padding-top: 10px;
+		text-align: center;
+	}
+	
+	#bloc_left li 
+	{
+		list-style-type: none;
+		font-size: 1em;
+		padding-right: 20px;
+	}
+	
+	#bloc_left a, a:hover
+	{
+		color: white;
+	}
+
+	
+	#aboutme
+	{
+		margin-top: 50px;
+	}
+	
+	#aboutme p
+	{
+		padding: 20px;
+		text-align: left;
+	}
+	
+	#lobbies
+	{
+		margin-bottom: 10%;
+		margin-top: 250%;
+	}
+	
+	.icons
+	{
+		display: flex;
+		justify-content: center;
+	}
+	
+	.iconslobbies
+	{
+		border-radius: 50%;
+		border: 2px white solid; 
+		padding: 0.5em;
+		margin-right: 3%;
+		margin-left: 3%;
+	}
+	
+	/* fin bloc_left*/
+
+}
