--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ header p
 
 	#displaybloc p
 	{
-		font-style: 1.2em;
+		font-size: 1.2em;
 	}
 
 	/* bloc_right */
@@ -502,7 +502,7 @@ header p
 
 	#displaybloc p
 	{
-		font-style: 1.2em;
+		font-size: 1.2em;
 	}
 
 	/* bloc_right */
