--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ header h1
 .border
 {
 	border-bottom: solid;
-	border-color: purple;
+	border-color: rgb(128, 0, 129);
 }
 
 .titlecolor
 {
-	color: purple;
+	color:rgb(128, 0, 129);
 }
 
 header p
@@ -78,7 +78,7 @@ header p
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-bottom: 2%;
-	border-bottom: 2px purple solid;
+	border-bottom: 2px rgb(128, 0, 129) solid;
 }
 
 .titlesection
@@ -91,7 +91,7 @@ header p
 .iconsright
 {
 	margin-top: 2%;
-	color: purple;
+	color: rgb(128, 0, 129);
 }
 
 .container
@@ -123,7 +123,7 @@ header p
 
 .date i
 {
-	color: purple;
+	color: rgb(128, 0, 129);
 	margin-top: 15px;
 }
 
@@ -136,6 +136,11 @@ header p
 {
 	list-style-type: none;
 	font-weight: bold;
+}
+
+#bloc_right a:hover
+{
+	color: rgb(128, 0, 129);
 }
 
 .structure
@@ -208,9 +213,14 @@ header p
 	font-size: 1em;
 }
 
-#bloc_left a, a:hover
+#bloc_left a
 {
 	color: white;
+}
+
+#bloc_left a:hover
+{
+	color: black;
 }
 
 #aboutme
@@ -312,7 +322,7 @@ header p
 	.titlecontent
 	{
 		display: flex;
-		border-bottom: 2px purple solid;
+		border-bottom: 2px rgb(128, 0, 129)solid;
 	}
 
 	.titlesection
@@ -322,7 +332,7 @@ header p
 
 	.iconsright
 	{
-		color: purple;
+		color: rgb(128, 0, 129);
 	}
 
 	.container
@@ -355,7 +365,7 @@ header p
 
 	.date i
 	{
-		color: purple;
+		color: rgb(128, 0, 129);
 		margin-top: 15px;
 	}
 
@@ -466,7 +476,7 @@ header p
 
 /* mediaqueries grands téléphones*/
 
-@media screen and (min-width: 321px) and (max-width:767px) 
+@media screen and (min-width: 360px) and (max-width:767px) 
 {
 
 	body
@@ -528,7 +538,7 @@ header p
 	.titlecontent
 	{
 		display: flex;
-		border-bottom: 2px purple solid;
+		border-bottom: 2px rgb(128, 0, 129) solid;
 	}
 	
 	.titlesection
@@ -538,7 +548,7 @@ header p
 	
 	.iconsright
 	{
-		color: purple;
+		color:rgb(128, 0, 129);
 	}
 	
 	.container
@@ -571,7 +581,7 @@ header p
 	
 	.date i
 	{
-		color: purple;
+		color: rgb(128, 0, 129);
 	}
 	
 	#formation
@@ -711,12 +721,12 @@ header p
 	.border
 	{
 		border-bottom: solid;
-		border-color: purple;
+		border-color: rgb(128, 0, 129);
 	}
 	
 	.titlecolor
 	{
-		color: purple;
+		color: rgb(128, 0, 129);
 	}
 	
 	header p
@@ -743,7 +753,7 @@ header p
 		margin-left: 10%;
 		margin-right: 10%;
 		margin-bottom: 2%;
-		border-bottom: 2px purple solid;
+		border-bottom: 2px rgb(128, 0, 129)solid;
 	}
 	
 	.titlesection
@@ -756,7 +766,7 @@ header p
 	.iconsright
 	{
 		margin-top: 5%;
-		color: purple;
+		color: rgb(128, 0, 129);
 	}
 	
 	.container
@@ -788,7 +798,7 @@ header p
 	
 	.date i
 	{
-		color: purple;
+		color: rgb(128, 0, 129);
 		margin-top: 15px;
 	}
 	
